[package]
name = "activelook-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.17" # Due to postcard
postcard = "1.0.8"

# By default, `serde` has the `std` feature enabled, which makes it unsuitable for embedded targets.
serde = { version = "1.0.*", default-features = false }
