[package]
name = "activelook-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization
#binary-layout = "4.0.1"
#binrw = { version = "0.13.3", default-features = false }
#modular-bitfield = "0.11.2"
#cstr_core = "0.2.6"
#byteorder = "1.5.0"
#bitvec = "1.0.1" # Same as deku
deku = { version = "0.18" }
#deku = { git = "https://github.com/sharksforarms/deku.git", rev = "6df1a1b" } # Required for undocumented Vec read_all support.

thiserror = "*"
log = "0.4.21"
embedded-io = "0.6.1"

[dev-dependencies]
env_logger = "*"
test-log = "*"
